--- a/_includes/root.html
+++ b/_includes/root.html
@@ -5,41 +5,14 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
     <title>{{ Jamstackblog }}</title>
 </head>
 <script></script>
 <body>
 
 <header>
-    <div class="toolbar">
-        <div class="inner">
-            <div class="header-inside">
-                <button id="menu-open" class="menu-toggle">
-                    <span class="screen-reader-text">Menu</span>
-                    <span class="icon-menu" aria-hidden="true"></span>
-                </button>
-                <nav id="main-navigation" class="site.nav" aria-label="Main Navigation">
-                    <div class="site-nav-inside">
-                        <ul class="menu">
-                            <li class="menu-item current-menu-item">
-                                <a href="/toolbar/home">Accueil</a>
-                            </li>
-                            <li class="menu-item current-menu-item">
-                                <a href="/toolbar/items">Mes articles</a>
-                            </li>
-                            <li class="menu-item current-menu-item">
-                                <a href="/toolbar/about">A propos</a>
-                            </li>
-                        </ul>
-                    </div>
-                </nav>
-            </div>
-        </div>
-
-        </div>
-    </div>
-    <h1>Le blog qui déchire</h1>
+    <h1>Le blog ZEN</h1>
     <nav>
         <ul>
             <li><a href="/">Accueil</a></li>
