--- a/_includes/root.html
+++ b/_includes/root.html
@@ -27,7 +27,7 @@
 </main>
 
 <footer>
-    <p><a href="https://github.com/jlsgrand/">Retrouvez-moi sur Github</a></p>
+    <p><a href="https://github.com/ValG94/Jamstackblog/">Retrouvez-moi sur Github</a></p>
 </footer>
 
 </body>
